added about page to extend from layout.pug

--- a/06-templating-pug/views/index.pug
+++ b/06-templating-pug/views/index.pug
@@ -9,4 +9,4 @@
 
     //- h1 a bakery for the common man
     //- h2 built with butter, floured with love
-    //-   img(src'https://s-media-cache-ak0.pinimg.com/originals/39/f8/cb/39f8cb6fc77937bdbdc3d45c36279e92.jpg')
+    //-   img(src='https://s-media-cache-ak0.pinimg.com/originals/39/f8/cb/39f8cb6fc77937bdbdc3d45c36279e92.jpg')
