updated object of baked goods to be name and price, added inventory.pug

--- a/06-templating-pug/views/index.pug
+++ b/06-templating-pug/views/index.pug
@@ -1,12 +1,7 @@
-//- doctype html
-//- html
-//-   head
-//-     title bakery!
-//-     //- include stylesheet.pug
-//-   body
-    include nav.pug
-    block default
+extend layout.pug
 
-    //- h1 a bakery for the common man
-    //- h2 built with butter, floured with love
-    //-   img(src='https://s-media-cache-ak0.pinimg.com/originals/39/f8/cb/39f8cb6fc77937bdbdc3d45c36279e92.jpg')
+block content
+    h1 a bakery for the common man
+    h5 built with butter, floured with love
+      img(src='https://s-media-cache-ak0.pinimg.com/originals/39/f8/cb/39f8cb6fc77937bdbdc3d45c36279e92.jpg')
+        p We make the best breaded creatures to ever roam your stomach!
