--- a/06-templating-pug/views/about.pug
+++ b/06-templating-pug/views/about.pug
@@ -1,7 +1,9 @@
-extends layout.put
+extends layout.pug
 
 block content
+
   h1 About
     img(src='http://birminghameastside.com/wp-content/uploads/2016/11/billy-connolly-1.jpg');
       h3 Bio:
         p I love pizza, muffins and laughing
+          p= currentTime
