Inventory page is showing all items, about page is displaying image and current time

--- a/06-templating-pug/views/about.pug
+++ b/06-templating-pug/views/about.pug
@@ -3,7 +3,7 @@ extends layout.pug
 block content
 
   h1 About
-    img(src='http://birminghameastside.com/wp-content/uploads/2016/11/billy-connolly-1.jpg');
-      h3 Bio:
-        p I love pizza, muffins and laughing
-          p= currentTime
+    img(src='http://birminghameastside.com/wp-content/uploads/2016/11/billy-connolly-1.jpg')
+  h3 Bio:
+    p I love pizza, muffins and laughing
+    p= currentTime
