--- a/06-templating-pug/views/index.pug
+++ b/06-templating-pug/views/index.pug
@@ -1,7 +1,6 @@
-extend layout.pug
-
+extends layout.pug
 block content
-    h1 a bakery for the common man
+  h1 a bakery for the common man
     h5 built with butter, floured with love
       img(src='https://s-media-cache-ak0.pinimg.com/originals/39/f8/cb/39f8cb6fc77937bdbdc3d45c36279e92.jpg')
-        p We make the best breaded creatures to ever roam your stomach!
+    p We make the best breaded creatures to ever roam your stomach!
