--- a/06-templating-pug/views/layout.pug
+++ b/06-templating-pug/views/layout.pug
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title bakery!
+      link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans")
+    link(rel='stylesheet' href='/css/main.css')
 
   body
     include nav.pug
